# PiUi

./: .gitmodules  CMakeLists.txt  build.sh
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
res/: background.frag.glsl  background.vert.glsl  diffuse.frag.glsl
scripts/: InstallDependencies.sh
src/: FileSystem.cpp  FileSystem.hpp  Gamecontroller.cpp  Gamecontroller.hpp  Gamepad.cpp  Gamepad.hpp  Main.cpp  Material.cpp  Material.hpp  Quad.cpp  Quad.hpp  opengl.c  opengl.h
